Closed Bug 1323203 Opened 7 years ago Closed 7 years ago

Devirtualize nsPIDOMWindow::IsRunningTimeout()

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

Details

Attachments

(1 file)

      No description provided.
Attachment #8818275 - Flags: review?(bkelly) → review+
Pushed by eakhgari@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/056dd99b0478
Devirtualize nsPIDOMWindow::IsRunningTimeout(); r=bkelly
Assignee: nobody → ehsan
Priority: -- → P3
https://hg.mozilla.org/mozilla-central/rev/056dd99b0478
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: