Bug 1323203 - Devirtualize nsPIDOMWindow::IsRunningTimeout(); r=bkelly