dom/base/nsGlobalWindow.cpp
@@ -3948,6 +3948,12 @@ nsPIDOMWindowInner::TimeoutManager()
   return *mTimeoutManager;
 }
 
+bool
+nsPIDOMWindowInner::IsRunningTimeout()
+{
+  return TimeoutManager().IsRunningTimeout();
+}
+
 SuspendTypes
 nsPIDOMWindowOuter::GetMediaSuspend() const
 {
@@ -12131,13 +12137,6 @@ nsGlobalWindow::FireDelayedDOMEvents()
   }
 
   return NS_OK;
-}
-
-bool
-nsGlobalWindow::IsRunningTimeout()
-{
-  MOZ_ASSERT(IsInnerWindow());
-  return mTimeoutManager->IsRunningTimeout();
 }
 
 //*****************************************************************************
