dom/base/nsPIDOMWindow.h
@@ -214,8 +214,6 @@ public:
     return mDoc;
   }
 
-  virtual bool IsRunningTimeout() = 0;
-
 protected:
   // Lazily instantiate an about:blank document if necessary, and if
   // we have what it takes to do so.
@@ -876,6 +874,8 @@ public:
   bool HasAudioContexts() const;
 
   mozilla::dom::TimeoutManager& TimeoutManager();
+
+  bool IsRunningTimeout();
 
 protected:
   void CreatePerformanceObjectIfNeeded();
